libstream-more-perl (0.6.6) UNRELEASED; urgency=low

  * Stream::MemoryStorage implemented
  * several Test::Class-based Stream::Test::* modules

 -- Vyacheslav Matjukhin (No comments) <mmcleric@yandex-team.ru>  Mon, 16 Aug 2010 18:15:17 +0400

libstream-more-perl (0.6.5) unstable; urgency=low

  * Stream::Formatter::JSON: don't quote json twice; key renamed to 'data2' to
    keep backward compatibility

 -- Vyacheslav Matjukhin (No comments) <mmcleric@yandex-team.ru>  Fri, 06 Aug 2010 19:35:55 +0400

libstream-more-perl (0.6.4) unstable; urgency=low

  * Stream::Queue:
   - adaptive client chunk sizes
   - limit default queue size to 5 GB instead of 10

 -- Vyacheslav Matjukhin (No comments) <mmcleric@yandex-team.ru>  Fri, 30 Jul 2010 17:07:50 +0400

libstream-more-perl (0.6.3) unstable; urgency=low

  * one more convert() fix
  * and one more

 -- Vyacheslav Matjukhin (No comments) <mmcleric@yandex-team.ru>  Fri, 25 Jun 2010 17:55:28 +0400

libstream-more-perl (0.6.2) unstable; urgency=low

  * typo fix

 -- Vyacheslav Matjukhin (No comments) <mmcleric@yandex-team.ru>  Fri, 25 Jun 2010 13:31:08 +0400

libstream-more-perl (0.6.1) unstable; urgency=low

  * Stream::Queue:
   - 'uninitialized' warning fixed
   - convert() from old format implemented

 -- Vyacheslav Matjukhin (No comments) <mmcleric@yandex-team.ru>  Thu, 24 Jun 2010 21:40:33 +0400

libstream-more-perl (0.6.0) unstable; urgency=low

  * Stream::Queue improvements
   - permanent data is keeped in log, chunks created per-client on depand
   - gc() method instead of old clean_ids(), called only from time to time
   - stress tests and benchmarks
  * Stream::Simple:
   - code_out() - another version of processor() from Stream::Out
   - array_seq() renamed to array_in()
  * Stream::Propagate implemented

 -- Vyacheslav Matjukhin (No comments) <mmcleric@yandex-team.ru>  Wed, 23 Jun 2010 22:50:43 +0400

libstream-more-perl (0.5.0) unstable; urgency=low

  * Stream::Filter::Subfilter implemented
