@@ -2,6 +2,7 @@ libstream-more-perl (0.6.6) UNRELEASED; urgency=low
 
   * Stream::MemoryStorage implemented
   * several Test::Class-based Stream::Test::* modules
+  * Stream::Concat implemented
 
  -- Vyacheslav Matjukhin (No comments) <mmcleric@yandex-team.ru>  Mon, 16 Aug 2010 18:15:17 +0400
 
